--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <div id='Content'>
 
      <div id="kadoIn">
-       <!-- Tombol Surat --><img src="https://alphacyber4rt.github.io/File/Kado.png"/>
+       <!-- Tombol Surat --><img src="https://alphacyber4rt.github.io/File/Ketupat.png"/>
      </div>
      <p id="ket">Klik Kadonya!</p>
 
