--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    <audio src="https://alphacyber4rt.github.io/File/DJikhlas.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper --><img src="https://alphacyber4rt.github.io/File/Bg%20Eid%20Mubarak.png" id="wallpaper"/><div id="beneranblur"></div>
+     <!-- Wallpaper --><img src="https://alphacyber4rt.github.io/File/Mubarak.png" id="wallpaper"/><div id="beneranblur"></div>
    </div>
    
    <div id='Content'>
