--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
      <div id="kadoIn">
        <!-- Tombol Surat --><img src="https://alphacyber4rt.github.io/File/Ketupat.png"/>
      </div>
-     <p id="ket">Klik Kadonya!</p>
+     <p id="ket">Klik Kadonya Bee!</p>
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
@@ -71,12 +71,12 @@
        <!-- Pesan -->
        <p id="pesan3">Ciee.. Ada yang Lebaran Nih 🌙✨</p>
        <p id="pesan4">Selamat Hari Raya, </p>
-       <p id="pesan5" class="gaya2">Makin tua makin bijak, ya 😄</p>
-       <p id="pesan6" class="gaya2">Semoga rezeki lancar biar bisa bagi-bagi THR lagi tahun depan 💸🌙</p>
+       <p id="pesan5" class="gaya2">Makin Bertambah usia makin Cantik, ya 😄</p>
+       <p id="pesan6" class="gaya2">Semoga rezeki lancar biar bisa bagi-bagi THR lagi tahun depan 💸🌙 Jangan Lupain Q</p>
        <p id="pesan7" class="gaya2">Sehat terus, jangan lupa puasa sunnah! 🌙💪</p>
 
        <p id="pesan8" class="gaya2">Bercanda dulu, hehe 😅 :v</p>
-       <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini, dosa-dosa diampuni dan hati makin bersih 🌙✨</p>
+       <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini, dosa-dosa Kita diampuni dan hati makin bersih 🌙✨</p>
        <p id="pesan10" class="gaya2">Selamat Level Up Ibadah!! 🌙🙏</p>
 
        <!-- Klik untuk Takjil 😋 -->
@@ -104,7 +104,7 @@
   
   async function inipesan(){
     var { value: nama } = await swals.fire({
-           title: 'Masukin Nama Kamu', input: 'text',
+           title: 'Masukin Nama Kamu Bee', input: 'text',
        });
        if(nama && nama.length < 11){
          window.nama = nama;
