--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   
   async function inipesan(){
     var { value: nama } = await swals.fire({
-           title: 'Masukin Nama Kamu Bee', input: 'text',
+           title: 'Masukin Nama Kamu', input: 'text',
        });
        if(nama && nama.length < 11){
          window.nama = nama;
