--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
        <p id="pesan7" class="gaya2">Sehat terus, jangan lupa puasa sunnah! 🌙💪</p>
 
        <p id="pesan8" class="gaya2">Bercanda dulu, hehe 😅 :v</p>
-       <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini, dosa-dosa Kita diampuni dan hati makin bersih 🌙✨</p>
+       <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini, dosa-dosa Kita diampuni dan hati makin bersih 🌙✨Selamat Hari Raya Aidilfitri Maaf Zahir dan Batin Bee 🙏</p>
        <p id="pesan10" class="gaya2">Selamat Level Up Ibadah!! 🌙🙏</p>
 
        <!-- Klik untuk Takjil 😋 -->
