--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
        <p id="pesan3">Ciee.. Ada yang Lebaran Nih 🌙✨</p>
        <p id="pesan4">Selamat Hari Raya, </p>
        <p id="pesan5" class="gaya2">Makin Bertambah usia makin Cantik, ya 😄</p>
-       <p id="pesan6" class="gaya2">Semoga rezeki lancar biar bisa bagi-bagi THR lagi tahun depan 💸🌙 Jangan Lupain Q</p>
+       <p id="pesan6" class="gaya2">Semoga rezeki lancar biar bisa bagi-bagi THR lagi tahun depan 💸🌙 Jangan Lupain Q 😄</p>
        <p id="pesan7" class="gaya2">Sehat terus, jangan lupa puasa sunnah! 🌙💪</p>
 
        <p id="pesan8" class="gaya2">Bercanda dulu, hehe 😅 :v</p>
-       <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini, dosa-dosa Kita diampuni dan hati makin bersih 🌙✨Selamat Hari Raya Aidilfitri Maaf Zahir dan Batin Bee 🙏</p>
+       <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini, dosa-dosa Kita diampuni dan hati makin bersih 🌙✨Selamat Hari Raya Aidilfitri Maaf Zahir dan Batin Yo Bee 🙏</p>
        <p id="pesan10" class="gaya2">Selamat Level Up Ibadah!! 🌙🙏</p>
 
        <!-- Klik untuk Takjil 😋 -->
@@ -87,7 +87,7 @@
      <div id="Tombol"><a id="By">&#128140; Lanjut</a></div>
 
      <!-- Pesan Tambahan -->
-     <p id="katatambahan" class="sembunyi">Gajadi deh, soalnya kamu belum mandi wudhu 😜</p>
+     <p id="katatambahan" class="sembunyi">Gajadi deh, soalnya kamu belum Mandi 😜</p>
      
      <!-- Pesan Ditolak -->
      <div id="pesanditolak">
