--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
        <p id="pesan9" class="gaya2">Oh iya, Semoga di Hari Raya ini:<br>
   ✨ Dosa-dosa kita langsung di-delete sama Yang Di Atas,<br>
   🌙 Hati bersih kayak bulan purnama,<br>
-  💸 THR aman, perut kenyang, timbangan naik 2kg!</p>
+  💸 THR aman, perut kenyang, timbangan naik 2kg!😅</p>
        <p id="pesan10" class="gaya2">Selamat Level Up Ibadah!! 🌙🙏</p>
 
        <!-- Klik untuk Takjil 😋 -->
